--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -14,7 +14,7 @@ Prints a list of command line options.
 Opens fapolicyd.conf and parses it to see if there are any syntax errors in the file.
 .TP
 .B \-\-check-watch_fs
-Check the mounted file systems against the watch_fs daemon config entry to determine is any file systems need to be added to the configuration.
+Check the mounted file systems against the watch_fs daemon config entry to determine if any file systems need to be added to the configuration.
 .TP
 .B \-\-check-trustdb
 Check the trustdb against the files on disk to look for mismatches that will cause problems at run time.
