--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
+- Update the locking between the main and decision threads
 
 1.1.2
 - Release the update lock if starting trust db read operations errors
