--- a/TODO
+++ b/TODO
@@ -4,7 +4,13 @@ Add ability to specify auxiliary information about which rule number triggers
 
 Userspace
 =========
-Support other packaging manifests
 Allow rules to express paths using globbing (fnmatch)
+Do trust db size check on all updates
+add db_max_size = auto
+On startup, pid file and check if /proc maps to fapolicyd terminate if so
+Add –check-status cli to send a signal to the daemon to output metrics to /var/run/ cli then reads and writes to console
+Close issue 182 since we keep the pid file
+
 Consider adding rule testing to cli (uid, pgm, file)
+Support other packaging manifests
 
