--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Add --check-status to fapolicyd-cli
 - If fapolicyd is already running, exit
 - Do trust db size check on all fapolicyd updates
+- Add bash completions
 
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
