--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - If in debug mode, do not write audit events to audit system
 - Update filesystems we dont care about
 - Add --check-path to fapolicyd-cli to locate missed files
+- Detect trusted static apps running programs by ld.so
 
 1.1.4
 - Fix descriptor leak on enqueue failure (Steven Brzozowski)
