--- a/doc/fapolicyd.conf.5
+++ b/doc/fapolicyd.conf.5
@@ -86,7 +86,7 @@ and does no integrity checking.
 Selecting this option will compare the size of the file with what it was knows to be. This is better than nothing and very fast since fapolicyd already collects size information during normal processing. However, an attacker could replace the file and as long as the size matches, it will not be detected.
 .TP
 .B ima
-Selecting this option will use a SHA256 hash that the IMA subsystem places in a file's extended attributes in addition to the size check. This means that all file systems holding executable code must support extended attributes.
+Selecting this option will use a hash that the IMA subsystem places in a file's extended attributes in addition to the size check. IMA measurements can be SHA256 or SHA512 depending on kernel policy. When the IMA digest and trust metadata disagree, fapolicyd recomputes the IMA hash for a single retry before logging rate-limited warnings. The recomputation adds hashing overhead on the first mismatch and there is currently no configuration knob to disable these warnings. This means that all file systems holding executable code must support extended attributes.
 .TP
 .B sha256
 Selecting this option will calculate a SHA256 hash by cryptographic means. A size check will also be performed.
@@ -104,6 +104,7 @@ Example:
 .TP
 .B rpm_sha256_only
 The option set to 1 forces the daemon to work only with SHA256 hashes. This is useful on the systems where the integrity is set to SHA256 or IMA and some rpms were originally built with e.g. SHA1. The daemon will ignore these SHA1 entries therefore they can be added manually via CLI with correct SHA256 to a trust file later. If set to 0 the daemon stores SHA1 in trustdb as well. This is compatible with older behavior which works with the integrity set to NONE and SIZE. The NONE or SIZE integrity setting considers the files installed via rpm as trusted and it does not care about their hashes at all. On the other hand the integrity set to SHA256 or IMA will never consider a file with SHA1 in trustdb as trusted. The default value is 0.
+The rpm backend records the digest length the package supplies, so systems configured to build or install RPMs with SHA512 store SHA512 values in the trust database unless \fBrpm_sha256_only\fP is set to 1.\^ Leaving the default of 0 accepts both SHA256 and SHA512 rpm content, while enabling the option filters out any digest shorter than SHA256. This setting only affects data imported from the rpm database and does not change hashes supplied by other trust sources.
 
 .TP
 .B allow_filesystem_mark
