--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -137,11 +137,11 @@ This option matches against the mime type of the file being accessed. See \fBfty
 .B trust
 This is a boolean describing whether it is required for the object to be in the trust database or not. A value of 1 means its required while 0 means its not. Trust checking is extended by the integrity setting in fapolicyd.conf.
 .TP
-.B filehash
+.B FILE_HASH
 (the legacy keyword
-.B sha256hash
+.B SHA256HASH
 is still accepted)
-This option matches against the sha256 hash of the file being accessed. The hash in the rules should be all lowercase letters and do NOT start with 0x. Lowercase is the default output of sha256sum.
+This option matches against the hash of the file being accessed. The accepted hash length follows the trust source, so RPM entries built with SHA512 store SHA512 digests while other sources may continue to provide SHA256. The hash in the rules should be all lowercase letters and do NOT start with 0x. Lowercase is the default output of sha256sum and sha512sum. The SHA256HASH keyword remains for compatibility but is deprecated; prefer FILE_HASH for new rules.
 .RE
 
 .SH SETS
