--- a/doc/fapolicyd-filter.conf.5
+++ b/doc/fapolicyd-filter.conf.5
@@ -6,7 +6,7 @@ The file
 .I /etc/fapolicyd/fapolicyd-filter.conf
 contains configuration of the filter for the application allowlisting daemon. This filter specifies an allow or exclude list of files from a trust source. Valid line starts with character '+', '-' or '#' for comments. The rest of the line contains a path specification. Space can be used as indentation to add more specific filters to the previous one. Note, that only one space is required for one level of an indent. If  there are multiple specifications on the same indentation level they extend the previous line with lower indentation, usually a directory.  The path may be specified using the glob pattern. A directory specification has to end with a slash ‘/’.
 
-The filters are processed as follows: Starting from the up the to bottom while in case of a match the result (+/-) is set unless there is an indented block which describes more detailed specification of the parent level match. The same processing logic is applied to the inner filters definitions. If there is no match, the parent’s result is set. If there is no match at all, the default result is minus (-).
+The filters are processed as follows: Starting from the up the to bottom while in case of a match the result (+/-) is set unless there is an indented block which describes more detailed specification of the parent level match. The same processing logic is applied to the inner filters definitions. If there is no match, the parent’s result is set. If there is no match at all, the default result is minus (-). Filters are stored internally as a tree of path fragments marked to keep or drop. The evaluator walks that tree iteratively (no recursion) using a stack that tracks the current depth and offset into the path being inspected. This keeps memory usage predictable even when filters are deeply nested. Real-world policy relies on shallow nesting, but the implementation will refuse to load or evaluate filters that nest more than 64 directory levels to prevent runaway stacks.
 
 If the result was a plus (+), the respective file from a trust source is imported to the TrustDB. Vice versa, if the result was a minus (-), the respective file is not imported.
 
@@ -51,6 +51,14 @@ From a performance point of view it is better to design an indented filter becau
 .B \ \ + *.py
 .B \ \ + *.pl
 .fi
+
+.SH THEORY OF OPERATION
+.PP
+The filter configuration is parsed into a tree where each node represents a path fragment and whether it is included or excluded. Each level of indentation in the configuration file becomes another depth level in that tree. During evaluation the daemon iteratively walks the tree with an explicit stack rather than recursion, advancing through the path as fragments match. This approach keeps evaluation deterministic and prevents deep call stacks, but it also means filter nesting cannot exceed 64 levels; longer hierarchies are rejected and reported as depth errors.
+
+.SH TESTING FILTERS
+.PP
+Administrators can validate how a change to \fIfapolicyd-filter.conf\fP behaves before rebuilding the trust database. Use \fBfapolicyd-cli --test-filter /path/to/file\fP to trace how the configuration is applied to a specific path and see the final include/exclude decision. When adding or updating trust entries, combine \fB--file add\fP or \fB--file update\fP with \fB--filter\fP so only paths that survive the filter are processed; this is useful when pointing the tool at directories to ensure the filter omits unwanted content while you test.
 
 .SH "SEE ALSO"
 .BR fapolicyd (8),
